[package]
name = "cmd"
version = "0.1.0"
authors = ["jacksoom <lifengliu1994@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7.1"
leveldb = "0.8.4"
nix = "0.17.0"
tempdir = "0.3.7"
rocksdb = "0.14.0"
chrono = "0.4.11"
