[package]
name = "order"
version = "0.1.0"
authors = ["jacksoom <liulifeng@rockminer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.4.1"
serde_json = "1.0.52"
skiplist = "0.3.0"
lazy_static = "1.4.0"
stable-skiplist = "0.1.1"
common = { path = "../common" }
crossbeam-skiplist = "0.0.0"
rbtree = "0.1"
rust_decimal_macros = "1.4.1"
smart-default = "0.6.0"
enum-display-derive = "0.1.0"
serde = { version = "1.0.110", features = ["derive"] }

