[package]
name = "orderbook"
version = "0.1.0"
authors = ["jacksoom <liulifeng@rockminer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
order = { path = "../order" }
rust_decimal = "1.0.1"
rust_decimal_macros = "1.4.1"
skiplist = { path = "/Users/jacksoom/.cargo/registry/src/mirrors.ustc.edu.cn-61ef6e0cd06fb9b8/skiplist-0.3.0"}
smart-default = "0.6.0"
libc = "0.2.70"
gob = "0.1.0"
serde_schema_derive = "0.0.1"
serde_derive = "1.0.110"
serde_schema = "0.0.1"
serde = { version = "1.0.110", features = ["derive"] }
serde_bytes = "0.11.4"
serde_json = "1.0.53"
chrono = "0.4.11"
crossbeam-channel = "0.4.2"
